# spheroProgram

./: .gitignore  CMakeLists.txt  main.cpp
include/: autonomousControl.hpp  manualControl.hpp  messageType.hpp  params.hpp  server.hpp  udpVideoServer.hpp  vision.hpp
src/: CMakeLists.txt  autonomousControl.cpp  manualControl.cpp  server.cpp  udpVideoServer.cpp  vision.cpp
